<resources>
    <string name="app_name">Coronavirus</string>
    <string name="inserir_Nome">Name:</string>
    <string name="inserir_Datadenascimento">Year Of Birth:</string>
    <string name="inserir">Insert</string>
    <string name="inserir_Suspeito">Suspect</string>
    <string name="consultar_Dados">Stats</string>
    <string name="text_Paciente">Insert Patient:</string>
    <string name="texto_Suspeitos">Insert Suspect:</string>
    <string name="texto_Consultar">Portugal Stats:</string>
    <string name="texto_Sexo">Gender:</string>
    <string name="texto_Distrito">District:</string>
    <string name="texto_Estado">State:</string>
    <string name="guardar_Paciente">Save</string>
    <string name="distrito_aveiro" translatable="false">Aveiro</string>
    <string name="distrito_beja" translatable="false">Beja</string>
    <string name="distrito_braga" translatable="false">Braga</string>
    <string name="distrito_braganca" translatable="false">Bragança</string>
    <string name="distrito_castelo_branco" translatable="false">Castelo Branco</string>
    <string name="distrito_coimbra" translatable="false">Coimbra</string>
    <string name="distrito_evora" translatable="false">Évora</string>
    <string name="distrito_faro" translatable="false">Faro</string>
    <string name="distrito_guarda" translatable="false">Guarda</string>
    <string name="distrito_leiria" translatable="false">Leiria</string>
    <string name="distrito_lisboa" translatable="false">Lisboa</string>
    <string name="distrito_portalegre" translatable="false">Portalegre</string>
    <string name="distrito_porto" translatable="false">Porto</string>
    <string name="distrito_santarem" translatable="false">Santarém</string>
    <string name="distrito_setubal" translatable="false">Setúbal</string>
    <string name="distrito_viana_do_castelo" translatable="false">Viana do Castelo</string>
    <string name="distrito_vila_real" translatable="false">Vila Real</string>
    <string name="distrito_viseu" translatable="false">Viseu</string>
    <string name="campo_obrigatorio">Field Required</string>
    <string name="GeneroF">Woman</string>
    <string name="GeneroM">Man</string>
    <string name="EstadoInfetado">Infected</string>
    <string name="EstadoMorto">Death</string>
    <string name="EstadoRecuperado">Recovered</string>
    <string name="mostrar_paciente">Show Patient</string>
    <string name="mostrar_suspeito">Show Suspect</string>
    <string name="mostrar">Show</string>
    <string name="guardar">Save</string>
    <string name="eliminar">Delete</string>
    <string name="editar">Edit</string>
    <string name="campo_entre">Between 1900 and 2020</string>
    <string name="campo_quatro_numeros">The field can only have 4 numbers</string>
    <string name="campo_erro">Error while deleting</string>
</resources>
