<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EliminaPacienteFragmnet">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserir_Nome" />

    <TextView
        android:id="@+id/textViewEnome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Francisco Marques" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserir_Datadenascimento" />

    <TextView
        android:id="@+id/textViewEano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2000" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_Sexo" />

    <TextView
        android:id="@+id/textViewEgenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Masculino" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_Distrito" />

    <TextView
        android:id="@+id/textViewEdistrito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guarda" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_Estado" />

    <TextView
        android:id="@+id/textViewEestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Recuperado" />

    <Button
        android:id="@+id/buttonEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DD1212"
        android:shadowColor="#00D80404"
        android:text="ELIMINAR" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancelar" />

</LinearLayout>