<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarSuspeito">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerViewSuspeitos"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSuspeito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:onClick="inserirSuspeito"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecyclerViewSuspeitos" />

    <Button
        android:id="@+id/buttonEditarSuspeito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/editar"
        app:layout_constraintEnd_toStartOf="@+id/buttonApagarSuspeito"
        app:layout_constraintStart_toEndOf="@+id/buttonSuspeito"
        app:layout_constraintTop_toBottomOf="@+id/RecyclerViewSuspeitos" />

    <Button
        android:id="@+id/buttonApagarSuspeito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:onClick="eliminarSuspeito"
        android:text="@string/eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecyclerViewSuspeitos" />
</androidx.constraintlayout.widget.ConstraintLayout>